App height on mobile fix

--- a/scss/pages/app/style.scss
+++ b/scss/pages/app/style.scss
@@ -45,9 +45,6 @@ $md4:479.98;
 
 html{
     background-color: #333;
-    // -ms-overflow-style: none;  /* IE 10+ */
-    // scrollbar-width: none; /* Firefox */
-    max-height: 100vh;
 }
 body{margin: 0;padding: 0;font-family: $fontfamily;font-size: 16; color: $fontcolor;}
 
@@ -61,22 +58,22 @@ body{margin: 0;padding: 0;font-family: $fontfamily;font-size: 16; color: $fontco
 
 .wrapper {
     min-height: 100vh;
-    max-height: 100vh;
+    height:calc(var(--vh, 1vh) * 100);
     width: 100%;
 
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    // flex-direction: column;
+    // align-items: center;
+    // justify-content: center;
     // overflow: hidden;
 }
 
 /* ------------------------------------------- */
 
 .container {
-    min-height: 100vh;
-    height: 100vh;
-    width: 100%;
+    min-height: 100%;
+
+
 
     display: grid;
     grid-template: minmax(auto, 50px) minmax(300px, 100vh) minmax(50px, 50px)/ minmax(320px, 1fr) ;
@@ -256,7 +253,7 @@ body{margin: 0;padding: 0;font-family: $fontfamily;font-size: 16; color: $fontco
     @import '../../moduls/resizebar.scss';
     
     .resizebar{
-        
+        user-select: none;
     }
     
     .content {
